// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction router > 'getAll' > should return filtered results for a rollup 1`] = `
{
  "totalTransactions": 2,
  "transactions": [
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "2883584",
      "blobGasMaxFee": "13107200",
      "blobGasPrice": "22",
      "blobGasUsed": "131072",
      "blobs": [
        {
          "versionedHash": "blobHash005",
        },
      ],
      "blockHash": "blockHash004",
      "blockNumber": 1004,
      "from": "address2",
      "hash": "txHash011",
      "maxFeePerBlobGas": "100",
      "timestamp": "2023-08-20T12:00:00.000Z",
      "to": "address4",
      "totalBlobSize": 1400,
    },
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "17301504",
      "blobGasMaxFee": "78643200",
      "blobGasPrice": "22",
      "blobGasUsed": "786432",
      "blobs": [
        {
          "versionedHash": "blobHash001",
        },
        {
          "versionedHash": "blobHash002",
        },
        {
          "versionedHash": "blobHash003",
        },
        {
          "versionedHash": "blobHash004",
        },
        {
          "versionedHash": "blobHash005",
        },
        {
          "versionedHash": "blobHash006",
        },
      ],
      "blockHash": "blockHash002",
      "blockNumber": 1002,
      "from": "address1",
      "hash": "txHash004",
      "maxFeePerBlobGas": "100",
      "timestamp": "2023-05-10T12:00:00.000Z",
      "to": "address3",
      "totalBlobSize": 7500,
    },
  ],
}
`;

exports[`Transaction router > 'getAll' > when getting paginated transaction results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash008",
    "blockNumber": 1008,
    "from": "address2",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "timestamp": "2023-08-31T16:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > 'getAll' > when getting paginated transaction results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "20",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "from": "address2",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "timestamp": "2023-08-28T10:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address2",
    "hash": "txHash011",
    "maxFeePerBlobGas": "100",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1400,
  },
]
`;

exports[`Transaction router > 'getAllFull' > should return filtered results for a rollup 1`] = `
{
  "totalTransactions": 2,
  "transactions": [
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "2883584",
      "blobGasMaxFee": "13107200",
      "blobGasUsed": "131072",
      "blobs": [
        {
          "blob": {
            "commitment": "commitment005",
            "proof": "proof005",
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 0,
        },
      ],
      "block": {
        "blobGasPrice": "22",
        "excessBlobGas": "15000",
        "number": 1004,
        "timestamp": 1692532800,
      },
      "blockHash": "blockHash004",
      "fromId": "address2",
      "gasPrice": "10",
      "hash": "txHash011",
      "maxFeePerBlobGas": "100",
      "rollup": "BASE",
      "toId": "address4",
      "totalBlobSize": 1400,
    },
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "17301504",
      "blobGasMaxFee": "78643200",
      "blobGasUsed": "786432",
      "blobs": [
        {
          "blob": {
            "commitment": "commitment001",
            "proof": "proof001",
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "commitment": "commitment002",
            "proof": "proof002",
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "commitment": "commitment003",
            "proof": "proof003",
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
        {
          "blob": {
            "commitment": "commitment004",
            "proof": "proof004",
            "size": 1300,
          },
          "blobHash": "blobHash004",
          "index": 3,
        },
        {
          "blob": {
            "commitment": "commitment005",
            "proof": "proof005",
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 4,
        },
        {
          "blob": {
            "commitment": "commitment006",
            "proof": "proof006",
            "size": 1500,
          },
          "blobHash": "blobHash006",
          "index": 5,
        },
      ],
      "block": {
        "blobGasPrice": "22",
        "excessBlobGas": "15000",
        "number": 1002,
        "timestamp": 1683720000,
      },
      "blockHash": "blockHash002",
      "fromId": "address1",
      "gasPrice": "10",
      "hash": "txHash004",
      "maxFeePerBlobGas": "100",
      "rollup": "BASE",
      "toId": "address3",
      "totalBlobSize": 7500,
    },
  ],
}
`;

exports[`Transaction router > 'getAllFull' > when getting paginated transaction results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment004",
          "proof": "proof004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "proof": "proof004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "proof": "proof004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1007,
      "timestamp": 1693490400,
    },
    "blockHash": "blockHash007",
    "fromId": "address5",
    "gasPrice": "10",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "OPTIMISM",
    "toId": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > 'getAllFull' > when getting paginated transaction results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "20",
      "excessBlobGas": "10000",
      "number": 1005,
      "timestamp": 1693216800,
    },
    "blockHash": "blockHash005",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "OPTIMISM",
    "toId": "address4",
    "totalBlobSize": 3000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment002",
          "proof": "proof002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1004,
      "timestamp": 1692532800,
    },
    "blockHash": "blockHash004",
    "fromId": "address5",
    "gasPrice": "10",
    "hash": "txHash008",
    "maxFeePerBlobGas": "100",
    "rollup": "ARBITRUM",
    "toId": "address6",
    "totalBlobSize": 1100,
  },
]
`;

exports[`Transaction router > 'getByHash' > should fail when providing a non-existent hash > [TRPCError: No transaction with hash 'nonExistingHash' found] 1`] = `[TRPCError: No transaction with hash 'nonExistingHash'.]`;

exports[`Transaction router > 'getByHash' > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasUsed": "1000",
  "blobGasBaseFee": "8650752",
  "blobGasMaxFee": "39321600",
  "blobGasPrice": "22",
  "blobGasUsed": "393216",
  "blobs": [
    {
      "versionedHash": "blobHash001",
    },
    {
      "versionedHash": "blobHash002",
    },
    {
      "versionedHash": "blobHash003",
    },
  ],
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "from": "address1",
  "hash": "txHash001",
  "maxFeePerBlobGas": "100",
  "timestamp": "2022-10-16T12:00:00.000Z",
  "to": "address2",
  "totalBlobSize": 3300,
}
`;

exports[`Transaction router > 'getByHashFull' > should fail when providing a non-existent hash > [TRPCError: No transaction with hash 'nonExistingHash' found] 1`] = `[TRPCError: No transaction with hash 'nonExistingHash'.]`;

exports[`Transaction router > 'getByHashFull' > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasUsed": "1000",
  "blobGasBaseFee": "8650752",
  "blobGasMaxFee": "39321600",
  "blobGasUsed": "393216",
  "blobs": [
    {
      "blob": {
        "commitment": "commitment001",
        "proof": "proof001",
        "size": 1000,
      },
      "blobHash": "blobHash001",
      "index": 0,
    },
    {
      "blob": {
        "commitment": "commitment002",
        "proof": "proof002",
        "size": 1100,
      },
      "blobHash": "blobHash002",
      "index": 1,
    },
    {
      "blob": {
        "commitment": "commitment003",
        "proof": "proof003",
        "size": 1200,
      },
      "blobHash": "blobHash003",
      "index": 2,
    },
  ],
  "block": {
    "blobGasPrice": "22",
    "excessBlobGas": "15000",
    "number": 1001,
    "timestamp": 1665921600,
  },
  "blockHash": "blockHash001",
  "fromId": "address1",
  "gasPrice": "10",
  "hash": "txHash001",
  "maxFeePerBlobGas": "100",
  "rollup": null,
  "toId": "address2",
  "totalBlobSize": 3300,
}
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "20",
      "excessBlobGas": "10000",
      "number": 1005,
      "timestamp": 1693216800,
    },
    "blockHash": "blockHash005",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "OPTIMISM",
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment002",
          "proof": "proof002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment002",
          "proof": "proof002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1003,
      "timestamp": 1691064000,
    },
    "blockHash": "blockHash003",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash005",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 3200,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1003,
      "timestamp": 1691064000,
    },
    "blockHash": "blockHash003",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash006",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;
